--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "version": 2,
-  "crons": [{"path": "/api/cron", "schedule": "0 6 * * 1"}]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
